syntax = "proto3";
package clusterpb;

option go_package = "github.com/philborlin/committed/internal/cluster/clusterpb";

message LogEntity {
    string typeID = 1;
	bytes Key = 2;
	bytes Data = 3;
}

message LogProposal {
    repeated LogEntity logEntities = 1;
}

enum LogValidationStrategy {
    NoValidation = 0;
}

message LogType {
    string ID = 1;
    string Name = 2;
    int32 Version = 3;
    string SchemaType = 4;
    bytes Schema = 5;
    LogValidationStrategy Validate = 6;
}